Test/refman/Example-BV3a.dfy.expect
Example-BV3a.dfyp(5,18): Error: arguments must have comparable types (got bv5 and bv6)
1 resolution/type errors detected in Example-BV3a.dfyp
